566 - QSharedMutex Done. Added documentation to the QMutex's destructor.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -170,6 +170,8 @@
     <File Name="../../../../source/EQThreadPriority.cpp"/>
     <File Name="../../../../headers/QMutex.h"/>
     <File Name="../../../../source/QMutex.cpp"/>
+    <File Name="../../../../headers/QSharedMutex.h"/>
+    <File Name="../../../../source/QSharedMutex.cpp"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
