--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="..\..\..\..\headers\QFileStream.h" />
     <ClInclude Include="..\..\..\..\headers\QMutex.h" />
     <ClInclude Include="..\..\..\..\headers\QSharedMutex.h" />
+    <ClInclude Include="..\..\..\..\headers\QRecursiveMutex.h" />
     <ClInclude Include="..\..\..\..\headers\SQDirectory.h" />
     <ClInclude Include="..\..\..\..\headers\QFileInfo.h" />
     <ClInclude Include="..\..\..\..\headers\QDirectoryInfo.h" />
@@ -207,6 +208,7 @@
     <ClCompile Include="..\..\..\..\source\QFileStream.cpp" />
     <ClCompile Include="..\..\..\..\source\QMutex.cpp" />
     <ClCompile Include="..\..\..\..\source\QSharedMutex.cpp" />
+    <ClCompile Include="..\..\..\..\source\QRecursiveMutex.cpp" />
     <ClCompile Include="..\..\..\..\source\SQDirectory.cpp" />
     <ClCompile Include="..\..\..\..\source\QFileInfo.cpp" />
     <ClCompile Include="..\..\..\..\source\QDirectoryInfo.cpp" />
