--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -119,6 +119,7 @@
       <File Name="../../../../tests/unit/testmodule_system/QMutex_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QThreadWhiteBox.h"/>
       <File Name="../../../../tests/unit/testmodule_system/QSharedThread_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QRecursiveMutex_Test.cpp"/>
     </VirtualDirectory>
   </VirtualDirectory>
   <VirtualDirectory Name="TestSystem (shared)">
