--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -174,6 +174,7 @@
     <File Name="../../../../source/QSharedMutex.cpp"/>
     <File Name="../../../../headers/QRecursiveMutex.h"/>
     <File Name="../../../../source/QRecursiveMutex.cpp"/>
+    <File Name="../../../../headers/QScopedExclusiveLock.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
