--- a/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/System/System.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="..\..\..\..\headers\QCallStackTracePlainTextFormatter.h" />
     <ClInclude Include="..\..\..\..\headers\QCallTrace.h" />
     <ClInclude Include="..\..\..\..\headers\QBinaryStreamWriter.h" />
+    <ClInclude Include="..\..\..\..\headers\QConditionVariable.h" />
     <ClInclude Include="..\..\..\..\headers\QDateTimeNow.h" />
     <ClInclude Include="..\..\..\..\headers\QFileStream.h" />
     <ClInclude Include="..\..\..\..\headers\QMutex.h" />
@@ -205,6 +206,7 @@
     <ClCompile Include="..\..\..\..\source\QCallStackTrace.cpp" />
     <ClCompile Include="..\..\..\..\source\QCallStackTracePlainTextFormatter.cpp" />
     <ClCompile Include="..\..\..\..\source\QCallTrace.cpp" />
+    <ClCompile Include="..\..\..\..\source\QConditionVariable.cpp" />
     <ClCompile Include="..\..\..\..\source\QDateTimeNow.cpp" />
     <ClCompile Include="..\..\..\..\source\QFileStream.cpp" />
     <ClCompile Include="..\..\..\..\source\QMutex.cpp" />
