--- a/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/System/System.project
@@ -112,6 +112,9 @@
       <File Name="../../../../tests/unit/testmodule_system/QCallTrace_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QCallStackTrace_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_system/QCallStackTracePlainTextFormatter_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QAbstractCallStackTracePrinter_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_system/QAbstractCallStackTracePrinterMock.h"/>
+      <File Name="../../../../tests/unit/testmodule_system/QCallStackTraceConsolePrinter_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Threading">
       <File Name="../../../../tests/unit/testmodule_system/QThread_Test.cpp"/>
