RTTI utilities big refactoring. QObject removed. SQTypeExtensions removed. Methods of QObject moved to RTTI definitions. Existing interfaces and abstract classes adapted to the new methodology. Added many new constructor overloads to QArgumentTrace. Added two classes QTypeWithGetType and QTypeWithToString as overload selectors for QArgumentTrace. Methods of SQTypeExtensions moved to QType. Those related to QObject have been removed. Added support for void types. Many tests added for QType, SQAnyTypeToStringConverter and QArgumentTrace. Removed a warning from mutexes.

--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
@@ -118,6 +118,8 @@
     <ClInclude Include="..\..\..\..\headers\QStackAllocator.h" />
     <ClInclude Include="..\..\..\..\headers\QStringUnicode.h" />
     <ClInclude Include="..\..\..\..\headers\QType.h" />
+    <ClInclude Include="..\..\..\..\headers\RTTIDefinitions.h" />
+    <ClInclude Include="..\..\..\..\headers\SQAnyTypeToStringConverter.h" />
     <ClInclude Include="..\..\..\..\headers\SQBoolean.h" />
     <ClInclude Include="..\..\..\..\headers\SQFloat.h" />
     <ClInclude Include="..\..\..\..\headers\SQInteger.h" />
@@ -143,6 +145,7 @@
     <ClCompile Include="..\..\..\..\source\QStackAllocator.cpp" />
     <ClCompile Include="..\..\..\..\source\QStringUnicode.cpp" />
     <ClCompile Include="..\..\..\..\source\QType.cpp" />
+    <ClCompile Include="..\..\..\..\source\SQAnyTypeToStringConverter.cpp" />
     <ClCompile Include="..\..\..\..\source\SQBoolean.cpp" />
     <ClCompile Include="..\..\..\..\source\SQFloat.cpp" />
     <ClCompile Include="..\..\..\..\source\SQInteger.cpp" />
