--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -91,6 +91,7 @@
     <File Name="../../../../headers/EQAssertionType.h"/>
     <File Name="../../../../headers/QReferenceWrapper.h"/>
     <File Name="../../../../headers/Endianness.h"/>
+    <File Name="../../../../headers/RTTIDefinitions.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="DataTypes">
     <File Name="../../../../headers/CrossPlatformBasicTypes.h"/>
@@ -118,6 +119,8 @@
     <File Name="../../../../source/SQVF32.cpp"/>
     <File Name="../../../../source/QCharIterator.cpp"/>
     <File Name="../../../../headers/QBasicArray.h"/>
+    <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
+    <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Memory">
     <File Name="../../../../headers/AllocationOperators.h"/>
