--- a/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj
@@ -32,6 +32,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QStackAllocator_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QStringUnicode_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QType_Test.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\RTTIDefinitions_Test.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\RTTITestClasses.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\SQAnyTypeToStringConverter_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\SQBoolean_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\SQFloat_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\SQInteger_Test.cpp" />
@@ -54,6 +57,7 @@
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\QAlignmentMocked.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\QPoolAllocatorWhiteBox.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\QStackAllocatorWhiteBox.h" />
+    <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\RTTITestClasses.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\UnicodeCollationTestData.h" />
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_common\UnicodeNormalizationTestData.h" />
   </ItemGroup>
